--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "0.0.1",
   "description": "a vue3 ui",
   "main": "dist/index.js",
+  "module": "dist/moudle.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "prepare": "husky install",
     "dev": "vite",
@@ -16,9 +21,9 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
-    "@vitejs/plugin-vue": "^2.1.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^10.0.0",
+    "esbuild": "^0.14.21",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
@@ -37,8 +42,6 @@
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-vue": "^6.0.0",
     "typescript": "^4.5.5",
-    "vite": "^2.7.13",
-    "vue": "^3.2.30",
-    "vue-tsc": "^0.31.2"
+    "vue": "^3.2.30"
   }
 }
