--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prepare": "husky install",
     "dev": "vite",
     "lint": "eslint --no-error-on-unmatched-pattern --ext .ts src/** --fix",
-    "build": "rollup -c"
+    "build": "rimraf dist && rollup -c"
   },
   "peerDependencies": {
     "vue": "^3.2.30"
@@ -36,6 +36,7 @@
     "postcss": "^8.4.6",
     "postcss-preset-env": "^7.3.1",
     "prettier": "^2.5.1",
+    "rimraf": "^3.0.2",
     "rollup": "^2.67.1",
     "rollup-plugin-dts": "^4.1.0",
     "rollup-plugin-esbuild": "^4.8.2",
